Retailer code review

--- a/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
+++ b/WebApp/src/app/features/party/dealerinfo/dealerinfo.component.html
@@ -913,6 +913,7 @@
 
                                     <tr [pSelectableRow]="dealerdocumentinfo">
                                         <td hidden>{{dealerdocumentinfo.DealerInfoId}}</td>
+                                        <td hidden>{{dealerdocumentinfo.DocumentTypeId}}</td>
                                         <td hidden>{{dealerdocumentinfo.DealerDocumentInfoId}}</td>
                                         <td>{{dealerdocumentinfo.DocumentTypeName}}</td>
                                         <td>{{dealerdocumentinfo.DocumentNumber}}</td>
